--- a/index.html
+++ b/index.html
@@ -1,93 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <base href="/" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/config/theme.css" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="style/main.css">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>The Future Galaxy Warrios</title>
-    <meta name="Intergalactic War is a project that begins with an exploration and that later begins by introducing new characters from extraterrestrial races that live in a confederation of galaxies and that once visited our galaxy and left by mistake some tiny living organisms and today they come to limbiate the error but The result is that there is an advanced race and they will have to choose whether to send negotiators or conquerors from their distant confederation of galaxies." content="Mint your NFT" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-    <div id="main-container">
-      <header>
-        <div class="main_box">
-            <main>
-              <div class="text">
-                <h1>THE GALAXY NEEDS YOU</h1><br>
-                <div id="logo_opensea">
-                  <a href="https://opensea.io/collection/thefuturegalaxywarrios/"> <img src="Opensea_logo_white.png" alt="Collection The Future Galaxy Warrios" width="100" /></a>
-                </div>
-                <div id="image_zombie">
-                  <img src="Zombie_Glow.png" alt="The_Future_Galaxy_Warrios_glow" width="100" >
-                </div>
-              </div>
-
-              <div id="Comunity">
-                <p>Join the community</p>
-              </div>
-              <div id="social_media">
-                <div class="logo1">
-                  <a href=""> <img src="logo_discord.png" alt="The_Future_Galaxy_Warrios_discord" /> </a>
-                </div>
-                <div class="logo2">
-                  <a href="https://twitter.com/Galactic_War_IW"> <img src="logo_twitter.png" alt="The_Future_Galaxy_Warrios_twitter" /> </a>
-                </div>
-                <div class="logo3">
-                  <a href=""> <img src="logo_instagram.png" alt="The_Future_Galaxy_Warrios_instagram" /> </a>
-                </div>
-              </div>
-
-            </main>
-          </div>
-      </header>
-    </div>
-
-    </div>
-    <div id="image_zombie_banner">
-      <img src="Banner_opensea.png" alt="The_Future_Galaxy_Warrios_banner" >
-    </div>
-
-    <div id="Roadmap">
-      <div class="stage1">
-        <h3>Roadmap</h3><br>
-        <p><br>--- ---</p><br>
-        <p></p><br>
-        <p><a href="https://polygonscan.com/address/0xFA75d37b8607Eff73F9f418663B7c006C8f7449b/"> Contract 0xFA75d37b8607Eff73F9f418663B7c006C8f7449b </a></p><br>
-        <p><a href="hhttps://opensea.io/collection/thefuturegalaxywarrios/"> You can view all minted NFTs on Opensea </a></p><br>
-      </div>
-
-  
-
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><base href="/"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><link rel="stylesheet" href="/config/theme.css"/><link rel="apple-touch-icon" href="/logo192.jpg"/><link rel="manifest" href="/manifest.json"/><title>The Future Galaxy Warrios</title><meta name="description" content="Mint your IW NFT"/><link href="/static/css/main.55a658b5.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function r(r){for(var n,i,a=r[0],c=r[1],l=r[2],f=0,p=[];f<a.length;f++)i=a[f],Object.prototype.hasOwnProperty.call(o,i)&&o[i]&&p.push(o[i][0]),o[i]=0;for(n in c)Object.prototype.hasOwnProperty.call(c,n)&&(e[n]=c[n]);for(s&&s(r);p.length;)p.shift()();return u.push.apply(u,l||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,a=1;a<t.length;a++){var c=t[a];0!==o[c]&&(n=!1)}n&&(u.splice(r--,1),e=i(i.s=t[0]))}return e}var n={},o={1:0},u=[];function i(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,i),t.l=!0,t.exports}i.e=function(e){var r=[],t=o[e];if(0!==t)if(t)r.push(t[2]);else{var n=new Promise((function(r,n){t=o[e]=[r,n]}));r.push(t[2]=n);var u,a=document.createElement("script");a.charset="utf-8",a.timeout=120,i.nc&&a.setAttribute("nonce",i.nc),a.src=function(e){return i.p+"static/js/"+({}[e]||e)+"."+{3:"8785656f"}[e]+".chunk.js"}(e);var c=new Error;u=function(r){a.onerror=a.onload=null,clearTimeout(l);var t=o[e];if(0!==t){if(t){var n=r&&("load"===r.type?"missing":r.type),u=r&&r.target&&r.target.src;c.message="Loading chunk "+e+" failed.\n("+n+": "+u+")",c.name="ChunkLoadError",c.type=n,c.request=u,t[1](c)}o[e]=void 0}};var l=setTimeout((function(){u({type:"timeout",target:a})}),12e4);a.onerror=a.onload=u,document.head.appendChild(a)}return Promise.all(r)},i.m=e,i.c=n,i.d=function(e,r,t){i.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},i.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},i.t=function(e,r){if(1&r&&(e=i(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(i.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)i.d(t,n,function(r){return e[r]}.bind(null,n));return t},i.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(r,"a",r),r},i.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},i.p="/",i.oe=function(e){throw console.error(e),e};var a=this["webpackJsonpled-punks-classic-club"]=this["webpackJsonpled-punks-classic-club"]||[],c=a.push.bind(a);a.push=r,a=a.slice();for(var l=0;l<a.length;l++)r(a[l]);var s=c;t()}([])</script><script src="/static/js/2.82719d32.chunk.js"></script><script src="/static/js/main.39ab6d95.chunk.js"></script></body></html>
